--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-number-format": "^4.4.1",
     "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
