--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.13.1",
     "react-dev-utils": "11.0.4",
     "react-dom": "^16.13.1",
+    "react-facebook-pixel": "^1.0.4",
     "react-modal": "^3.11.2",
     "react-number-format": "^4.4.1",
     "react-responsive-carousel": "^3.2.7",
